[package]
edition = "2021"
name = "vetovoima"
version = "0.1.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = true

[features]
default = [
  "bevy/bevy_winit",
  "bevy/serialize",
  "bevy/png",
  "bevy/x11",
  "bevy_kira_audio/ogg",
]

dev = [
  "bevy/dynamic_linking",
]

[dependencies]
bevy = "0.10.1"
bevy_kira_audio = "0.15.0"
bevy_prototype_lyon = "0.8.0"
bevy_rapier2d = {version = "0.21.0", features = ["simd-stable", "debug-render-2d"]}
rand = "0.8.5"
rand_distr = "0.4.3"
serde = "1.0.163"
toml = "0.7.4"
