[package]
edition = "2021"
name = "vetovoima"
version = "0.1.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = true

[features]
default = [
  "bevy/bevy_winit",
  "bevy/serialize",
  "bevy/png",
  "bevy/x11",
  "bevy_kira_audio/ogg",
]

dev = [
  "bevy/dynamic_linking",
]

[dependencies]
bevy = "0.15.3"
bevy_kira_audio = "0.22.0"
bevy_prototype_lyon = "0.13.0"
bevy_rapier2d = {version = "0.28.0", features = ["simd-stable", "debug-render-2d"]}
rand = "0.8.5"
rand_distr = "0.4.3"
serde = "1.0.219"
toml = "0.8.23"
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = {version = "0.3", features = ["wasm_js"]}
